--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ isolated_build = true
 
 [testenv]
 deps =
-    check-manifest >= 0.42
+    check-manifest <= 0.44
     # If your project uses README.rst, uncomment the following:
     # readme_renderer
     flake8
@@ -41,5 +41,5 @@ commands =
     py.test tests {posargs}
 
 [flake8]
-exclude = .tox,*.egg,build,data
+exclude = .tox,*.egg,build,data,Makefile,.pre-commit-config.yaml,MANIFEST.in
 select = E,W,F
