--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     build
     twine
 commands =
-    check-manifest --ignore 'tox.ini,tests/**'
+    check-manifest --ignore 'tox.ini,tests/**,docs/**,data/**,mkdocs.yml,.readthedocs.yml'
     python -m build
     python -m twine check dist/*
     flake8 .
