--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ name = "cubao-pypi-example"  # Required
 #
 # For a discussion on single-sourcing the version, see
 # https://packaging.python.org/guides/single-sourcing-package-version/
-version = "0.0.2"  # Required
+version = "0.0.3"  # Required
 
 # This is a one-line description or tagline of what your project does. This
 # corresponds to the "Summary" metadata field:
@@ -103,6 +103,7 @@ classifiers = [  # Optional
 # For an analysis of this field vs pip's requirements files see:
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [ # Optional
+  "fire",
   "loguru",
   "tqdm",
 ]
@@ -136,15 +137,18 @@ test = ["coverage"]
 
 # The following would provide a command line executable called `sample`
 # which executes the function `main` from this package when invoked.
-[project.scripts]  # Optional
-sample = "sample:main"
+# [project.scripts]  # Optional
+# sample = "sample:main"
 
 # This is configuration specific to the `setuptools` build backend.
 # If you are using a different build backend, you will need to change this.
 [tool.setuptools]
+# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
+# we use flat-layout (also known as "adhoc")
+packages = ["cubao_pypi_example"]
 # If there are data files included in your packages that need to be
 # installed, specify them here.
-package-data = {"sample" = ["*.dat"]}
+package-data = {"cubao_pypi_example" = ["*.dat"]}
 
 [build-system]
 # These are the assumed default build requirements from pip:
